libs/config/tests/errors/ce5_unexpected_array/stdout.ansi
[0m[1m[38;5;9merror[CE5][0m[1m: property was not expected to be an array[0m
  [0m[34m┌─[0m source.hpp:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m [0m[31marray[0m = {1,2,3};
  [0m[34m│[0m [0m[31m^^^^^[0m   [0m[34m-------[0m [0m[34munexpected array[0m
  [0m[34m│[0m [0m[31m│[0m        
  [0m[34m│[0m [0m[31mexpected [] here[0m
  [0m[34m│[0m
  [0m[34m=[0m [33mhelp[0m: add [] to the property
  [0m[34m=[0m [32mtry[0m: array[]

